testdata/baselines/reference/submodule/conformance/jsdocReturnTag1.errors.txt
returns.js(2,14): error TS8010: Type annotations can only be used in TypeScript files.
returns.js(9,14): error TS8010: Type annotations can only be used in TypeScript files.
returns.js(16,14): error TS8010: Type annotations can only be used in TypeScript files.


==== returns.js (3 errors) ====
    /**
     * @returns {string} This comment is not currently exposed
                 ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f() {
        return 5;
    }
    
    /**
     * @returns {string=} This comment is not currently exposed
                 ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f1() {
        return 5;
    }
    
    /**
     * @returns {string|number} This comment is not currently exposed
                 ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f2() {
        return 5 || "hello";
    }
    